<resources>
    <string name="app_name">Ambience</string>
    <string name="ambience">Ambience</string>
    <string name="caption">Community Through Photography</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="log_in">Log-In</string>
    <string name="new_user">New User? </string>
    <string name="sign_up">Sign Up</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="social_feed">Social Feed</string>
    <string name="daily_challenge">Daily Challenge</string>
    <string name="profile">Profile</string>
    <string name="new_chall">New Challenge In:</string>
    <string name="countdown">24:00:00</string>
    <string name="prompt">The challenge today is to take a photo that shows:</string>
    <string name="challenge">Something that both is and is not</string>
    <string name="user">Test_User_123</string>
    <string name="friend_1">Test_User_456</string>
    <string name="friend_2">Friend 2</string>
    <string name="friend_3">Friend 3</string>
    <string name="friend_4">Friend 4</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="search">Search Username</string>
    <string name="comp_mess">Compose Message</string>
    <string name="fr_count">Total Friends:</string>
    <string name="fr_count_val">054</string>
    <string name="recent">Recent Posts</string>
    <string name="react">React</string>
    <string name="comment">Comment</string>
    <string name="report">Report</string>
    <string name="welcome">Welcome Aboard</string>
    <string name="email">Email Address</string>
    <string name="phone">Phone Number</string>
    <string name="con_pass">Confirm Password</string>
    <string name="phone_ver">Click Here For Phone Verification</string>
    <string name="ter_con">Terms and Conditions</string>
    <string name="tos">Click Here To Agree To The ToS</string>
    <string name="account">Already Have An Account? </string>
    <string name="rec_pho">Recent Photos</string>
    <string name="reactions">Reactions</string>
    <string name="comments">Comments</string>
    <string name="streak">Current Streak: </string>
    <string name="days">XXX Days</string>
    <string name="ex_bio">Example Bio</string>
    <string name="opt_menu">Options Menu</string>
    <string name="up_to_p">Upgrade to Premium</string>
    <string name="settings">Settings</string>
    <string name="s_v_set">Social Visibility Settings</string>
    <string name="p_set">Profile Settings</string>
    <string name="r_account">Reset Account</string>
    <string name="d_account">Delete Account</string>
    <string name="b_friend">Block Friend</string>
    <string name="d_friend">Delete Friend</string>
    <string name="r_friend">Report Friend</string>
    <string name="v_profile">View Profile</string>
    <string name="rec_mess">Recent Messages</string>
    <string name="ex_mess_1">Subject:Hello</string>
    <string name="ex_mess_2">Example Message 2</string>
    <string name="ex_mess_3">Example Message 3</string>
    <string name="subject">Subject: Hello</string>
    <string name="test_mess">This is a test message</string>
</resources>