<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Ambience  -->
    <TextView
        android:id="@+id/ambienceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ambience"
        android:textStyle="bold"
        android:textColor="@color/logo"
        android:textSize="24sp"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"/>

    <!-- Image -->
    <ImageView
        android:id="@+id/ambienceImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/ambienceTextView"
        android:src="@drawable/aperturelogo"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"/>

    <!-- Community through photography  -->
    <TextView
        android:id="@+id/communityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caption"
        android:layout_below="@id/ambienceImageView"
        android:textSize="18sp"
        android:textColor="@color/logo"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"/>

    <!-- Username  -->
    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:layout_below="@id/communityTextView"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>

    <!-- Password  -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_below="@id/usernameEditText"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>

    <!-- Remember Me CheckBox -->
    <CheckBox
        android:id="@+id/rememberCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:layout_below="@id/passwordEditText"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"/>

    <!-- Login Button -->
    <TextView
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rememberCheckBox"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/textbox"
        android:text="@string/log_in"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/logo"
        android:gravity="center"/>

    <!-- New User  -->

    <TextView
        android:id="@+id/newUserTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_alignParentStart="true"
        android:layout_marginStart="146dp"
        android:layout_marginTop="16dp"
        android:text="@string/new_user"
        android:textColor="@color/logo" />

    <!-- Sign Up -->
    <TextView
        android:id="@+id/signUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/logo"
        android:textStyle="bold"
        android:layout_below="@id/loginButton"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@id/newUserTextView"/>

    <!-- Forgotten Password  -->
    <TextView
        android:id="@+id/forgottenPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotten_password"
        android:textColor="@color/logo"
        android:textStyle="bold"
        android:layout_below="@id/signUpTextView"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>