<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- Logo -->
    <ImageView
        android:id="@+id/apertureLogoImageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/aperturelogo"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <!-- Ambiance -->
    <TextView
        android:id="@+id/ambianceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/apertureLogoImageView"
        android:text="@string/ambience"
        android:textColor="@color/logo"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <!-- Community Through Photography -->
    <TextView
        android:id="@+id/welcomeAboardTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ambianceTextView"
        android:layout_marginStart="90dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/apertureLogoImageView"
        android:text="@string/welcome"
        android:textColor="@color/logo"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <!-- Email Address -->
    <TextView
        android:id="@+id/emailAddressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcomeAboardTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/logo"/>

    <EditText
        android:id="@+id/emailAddressEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailAddressTextView"
        android:layout_marginHorizontal="120dp"
        android:layout_marginTop="8dp"
        android:inputType="textEmailAddress"/>

    <!-- Phone Number -->
    <TextView
        android:id="@+id/phoneNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailAddressEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/phone"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/logo"/>

    <EditText
        android:id="@+id/phoneNumberEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneNumberTextView"
        android:layout_marginHorizontal="120dp"
        android:layout_marginTop="8dp"
        android:inputType="phone"/>

    <!-- Username -->
    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneNumberEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/username_hint"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/logo"/>

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameTextView"
        android:layout_marginHorizontal="120dp"
        android:layout_marginTop="8dp"
        android:inputType="text"/>

    <!-- Password -->
    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/password_hint"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/logo"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordTextView"
        android:layout_marginHorizontal="120dp"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"/>

    <!-- Confirm Password -->
    <TextView
        android:id="@+id/confirmPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/con_pass"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/logo"/>

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmPasswordTextView"
        android:layout_marginHorizontal="120dp"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"/>

    <!-- Phone Verification CheckBox -->
    <CheckBox
        android:id="@+id/phoneVerificationCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmPasswordEditText"
        android:layout_marginHorizontal="90dp"
        android:layout_marginTop="8dp"
        android:text="@string/phone_ver"
        android:textColor="@color/logo"/>

    <!-- Terms and Conditions TextView -->
    <TextView
        android:id="@+id/termsAndConditionsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneVerificationCheckBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/ter_con"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/logo"/>

    <!-- Terms and Conditions Agreement CheckBox -->
    <CheckBox
        android:id="@+id/termsAndConditionsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/termsAndConditionsTextView"
        android:layout_marginHorizontal="90dp"
        android:layout_marginTop="8dp"
        android:text="@string/tos"
        android:textColor="@color/logo"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/termsAndConditionsCheckBox"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textSize="16sp"
            android:textColor="@color/logo"/>

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/logo"/>
    </LinearLayout>
</RelativeLayout>