<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Test_User_123 -->
    <TextView
        android:id="@+id/textViewUser456"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friend_1"
        android:textSize="20sp"
        android:textColor="@color/logo"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>


    <!-- Subject: Hello -->
    <TextView
        android:id="@+id/textViewSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subject"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/textViewUser456"
        android:layout_marginTop="16dp"/>

    <!-- Message Body -->
    <TextView
        android:id="@+id/textViewMessageBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_mess"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/textViewSubject"
        android:layout_marginTop="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>